# tiny_personal_website

./: .dockerignore  .gitignore  Dockerfile  README.md  adapter.wsgi  app.py  band_names.py  band_names_db.py  band_names_init.py  config.yaml  db_init.py  flask_start.sh  generate_band_art.py  image_processing.py  jessebot.py  jessebot.wsgi  lib.py  personal_routes.py  pyproject.toml  requirements.txt  routes.py  web_routes.py
.config/: config.yaml.sample  example_apache_vhost.conf
config/: config.yaml  config.yaml.sample  config_sample.yaml  example.com.conf  example_apache_vhost.conf
css/: bootstrap.min.css  bootstrap_dark.min.css  bootstrap_flatdark.min.css  bootstrap_flatdark.min.css.good  likes_dislikes.css  main.css  main2.css  starter-template.css  tabs.css
front_end/css/: main.css  starter-template.css
front_end/html_templates/: footer.tpl  hate.tpl  header.tpl  index.tpl
front_end/views/: footer.tpl  header.tpl  index.tpl
scripts/: db_init.py  generate_band_art.py
static/css/: bootstrap.min.css  fonts.css  main.css
templates/: footer.html  footer_main.html  header_band.html  header_main.html  header_resources.html  index.html  next-band.html  resources.html
tiny_personal_website/: __init__.py  app.py  personal_routes.py
tiny_personal_website/config/: config.yaml
tiny_personal_website/templates/: header_main.html  header_resources.html  index.html  resources.html
views/: about.tpl  alt_header.tpl  contact.tpl  footer.tpl  footer_main.tpl  header.tpl  header_band.tpl  header_main.tpl  index.tpl  next-band.tpl  resources.tpl
(+3 files in other folders)
